unpackaged/main/default/objects/Titulacion__c/Titulacion__c.object-meta.xml
<CustomObject>
    <label>Titulación</label>
    <nameField>
        <label>Titulación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titulación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>