unpackaged/main/default/objects/Titulacion__c/fields/Avance_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Avance_de_obra__c</fullName>
    <formula>Vivienda__r.Porcentaje_Obra_Fisico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Avance de Obra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>