unpackaged/main/default/objects/Titulacion__c/fields/Aviso_de_Retencion__c.field-meta.xml
<CustomField>
    <fullName>Aviso_de_Retencion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificación de descuento</label>
    <type>Checkbox</type>
</CustomField>