unpackaged/main/default/objects/Titulacion__c/fields/Cambio_Fecha_Exigible_Cobro_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Fecha_Exigible_Cobro_Autorizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Fecha Exigible Cobro Autorizado</label>
    <type>Checkbox</type>
</CustomField>