unpackaged/main/default/objects/Titulacion__c/fields/Check_Confirmacion_Recepcion_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Check_Confirmacion_Recepcion_Notaria__c</fullName>
    <formula>Confirmacion_de_Recepcion_del_Expediente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Confirmación Recepción Notaría</label>
    <type>Checkbox</type>
</CustomField>