unpackaged/main/default/objects/Titulacion__c/fields/Check_Contado__c.field-meta.xml
<CustomField>
    <fullName>Check_Contado__c</fullName>
    <formula>IF( Tipo_de_Credito_Formula__c = &quot;CONTADO&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Contado</label>
    <type>Checkbox</type>
</CustomField>