unpackaged/main/default/objects/Titulacion__c/fields/Check_Credito__c.field-meta.xml
<CustomField>
    <fullName>Check_Credito__c</fullName>
    <formula>IF(Check_Contado__c, TRUE,
			AND( NOT(ISBLANK( Tipo_de_Credito_Formula__c )),
							 NOT(ISBLANK( TEXT(Financiera_2__c ))),
								NOT(ISBLANK( Numero_de_Credito__c)),
								NOT(ISBLANK( Monto_de_Credito_Definitivo__c )),
							 NOT(ISBLANK( Fecha_del_Avaluo__c ))
							)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Crédito</label>
    <type>Checkbox</type>
</CustomField>