unpackaged/main/default/objects/Titulacion__c/fields/Check_Credito_formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Credito_formula__c</fullName>
    <formula>NOT(Check_Contado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Crédito</label>
    <type>Checkbox</type>
</CustomField>