unpackaged/main/default/objects/Titulacion__c/fields/Check_Datos_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Check_Datos_Escritura__c</fullName>
    <formula>AND(NOT(ISBLANK( Fecha_de_Envio_a_Notaria__c)),
				NOT(ISBLANK( Notaria__c )),
				NOT(ISBLANK( Notario__c )),
				NOT(ISBLANK(	Importe_de_la_Escritura__c )),					
				NOT(ISBLANK( Numero_de_Escritura__c)), 
				NOT(ISBLANK( Fecha_de_Cita_para_Firma__c )),
				NOT(ISBLANK( Fecha_Firma_Cliente__c )),
				NOT(ISBLANK( Importe_de_Aval_o__c)),
    NOT(ISBLANK( Fecha_de_Recepcion_Notaria__c )),
				Confirmacion_de_Recepcion_del_Expediente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Datos Escritura</label>
    <type>Checkbox</type>
</CustomField>