unpackaged/main/default/objects/Titulacion__c/fields/Check_Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Check_Dictaminacion__c</fullName>
    <formula>Proceso_de_Venta__r.Dictaminacion__r.Chk_Dictaminacion_Completa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Dictaminación</label>
    <type>Checkbox</type>
</CustomField>