unpackaged/main/default/objects/Titulacion__c/fields/Check_Documentos_Ley_Antilavado__c.field-meta.xml
<CustomField>
    <fullName>Check_Documentos_Ley_Antilavado__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Documentos Ley Antilavado</label>
    <type>Checkbox</type>
</CustomField>