unpackaged/main/default/objects/Titulacion__c/fields/Check_Estatus_Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Check_Estatus_Cobranza_Comercial__c</fullName>
    <formula>IF(Subestatus_Cobranza_Comercial_Formula__c = &quot;APROBADO&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Estatus Cobranza Comercial</label>
    <type>Checkbox</type>
</CustomField>