unpackaged/main/default/objects/Titulacion__c/fields/Check_Fecha_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Avaluo__c</fullName>
    <formula>IF(ISBLANK(Fecha_del_Avaluo__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha Avalúo</label>
    <type>Checkbox</type>
</CustomField>