unpackaged/main/default/objects/Titulacion__c/fields/Check_Fecha_Cita_Firma__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Cita_Firma__c</fullName>
    <formula>IF(ISBLANK( Fecha_de_Cita_para_Firma__c ), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha Cita Firma</label>
    <type>Checkbox</type>
</CustomField>