unpackaged/main/default/objects/Titulacion__c/fields/Check_Fecha_de_Envio_a_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_de_Envio_a_Notaria__c</fullName>
    <formula>IF(ISBLANK( Fecha_de_Envio_a_Notaria__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha de Envío a Notaría</label>
    <type>Checkbox</type>
</CustomField>