unpackaged/main/default/objects/Titulacion__c/fields/Check_Fecha_Firma_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Firma_Cliente__c</fullName>
    <formula>IF(ISBLANK(Fecha_Firma_Cliente__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha Firma Cliente</label>
    <type>Checkbox</type>
</CustomField>