unpackaged/main/default/objects/Titulacion__c/fields/Check_Fecha_Recepcion_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Check_Fecha_Recepcion_Notaria__c</fullName>
    <formula>IF(ISBLANK( Fecha_de_Recepcion_Notaria__c ), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Fecha Recepción Notaría</label>
    <type>Checkbox</type>
</CustomField>