unpackaged/main/default/objects/Titulacion__c/fields/Check_Formalizacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Formalizacion_Formula__c</fullName>
    <formula>IF(  TEXT(Proceso_de_Venta__r.StageName) = &quot;Formalizado&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Formalización</label>
    <type>Checkbox</type>
</CustomField>