unpackaged/main/default/objects/Titulacion__c/fields/Check_Formalizacion_Registrada_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Formalizacion_Registrada_Formula__c</fullName>
    <formula>Formalizacion_Registrada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Formalización Registrada</label>
    <type>Checkbox</type>
</CustomField>