unpackaged/main/default/objects/Titulacion__c/fields/Check_Importe_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Check_Importe_Avaluo__c</fullName>
    <formula>IF(Importe_de_Aval_o__c &lt;= 0.00, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Importe Avalúo</label>
    <type>Checkbox</type>
</CustomField>