unpackaged/main/default/objects/Titulacion__c/fields/Check_Importe_Escritura_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Importe_Escritura_Formula__c</fullName>
    <formula>IF(Importe_de_la_Escritura__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Importe Escritura</label>
    <type>Checkbox</type>
</CustomField>