unpackaged/main/default/objects/Titulacion__c/fields/Check_Ley_Antilavado_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Ley_Antilavado_Formula__c</fullName>
    <formula>Cobranza_Comercial__r.Check_Ley_Antilavado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Ley Antilavado</label>
    <type>Checkbox</type>
</CustomField>