unpackaged/main/default/objects/Titulacion__c/fields/Check_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Check_Notaria__c</fullName>
    <formula>IF(ISBLANK(Notaria__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Notaría</label>
    <type>Checkbox</type>
</CustomField>