unpackaged/main/default/objects/Titulacion__c/fields/Check_Notario__c.field-meta.xml
<CustomField>
    <fullName>Check_Notario__c</fullName>
    <formula>IF(ISBLANK( Notario__c ), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Notario</label>
    <type>Checkbox</type>
</CustomField>