unpackaged/main/default/objects/Titulacion__c/fields/Check_Numero_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Check_Numero_Escritura__c</fullName>
    <formula>IF(ISBLANK( Numero_de_Escritura__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Numero Escritura</label>
    <type>Checkbox</type>
</CustomField>