unpackaged/main/default/objects/Titulacion__c/fields/Check_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Check_Proceso_de_Venta__c</fullName>
    <formula>IF(Estatus_del_Proceso_de_Venta__c = &quot;Formalizado&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Proceso de Venta</label>
    <type>Checkbox</type>
</CustomField>