unpackaged/main/default/objects/Titulacion__c/fields/Check_Promo_Precio_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Check_Promo_Precio_Vigente__c</fullName>
    <formula>IF(Check_Tiene_Promo_Precio__c,
  			IF(Promo_Precio_en_Rango_de_Fechas__c, TRUE, FALSE),
			TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Promo Precio Vigente</label>
    <type>Checkbox</type>
</CustomField>