unpackaged/main/default/objects/Titulacion__c/fields/Check_Promoci_n_de_Precio_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Promoci_n_de_Precio_Formula__c</fullName>
    <formula>IF( Estatus_Promocion_de_Precio__c = &quot;&quot;, TRUE,
			    AND( NOT(ISBLANK(Precio_Minimo_Solicitado__c)),
				        Promo_Precio_en_Rango_de_Fechas__c,
				        Estatus_Promocion_de_Precio__c = &quot;Aprobado&quot;
			       )
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Promoción de Precio</label>
    <type>Checkbox</type>
</CustomField>