unpackaged/main/default/objects/Titulacion__c/fields/Check_Sub_Estatus_del_Proceso_Formula__c.field-meta.xml
<CustomField>
    <fullName>Check_Sub_Estatus_del_Proceso_Formula__c</fullName>
    <formula>IF(OR( TEXT( Sub_Estatus_del_Proceso__c ) = &quot;Aprobado&quot;,
						 TEXT( Sub_Estatus_del_Proceso__c ) = &quot;En Firmas&quot;,
						 TEXT( Sub_Estatus_del_Proceso__c ) = &quot;Por Entregar&quot;,
						 TEXT( Sub_Estatus_del_Proceso__c ) = &quot;Entregado&quot;),
			TRUE, 
			FALSE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Sub Estatus del Proceso</label>
    <type>Checkbox</type>
</CustomField>