unpackaged/main/default/objects/Titulacion__c/fields/Check_Tiene_Promo_Precio__c.field-meta.xml
<CustomField>
    <fullName>Check_Tiene_Promo_Precio__c</fullName>
    <formula>Cobranza_Comercial__r.Check_Precio_Promocion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Tiene Promo Precio?</label>
    <type>Checkbox</type>
</CustomField>