unpackaged/main/default/objects/Titulacion__c/fields/Check_Valor_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Check_Valor_Operacion__c</fullName>
    <formula>IF(NOT(Check_Contado__c),
	 AND( ( TEXT(ROUND(Importe_de_la_Escritura__c,2)) = TEXT(ROUND(Valor_de_Operacion__c,2)) ),       
				   ( TEXT(ROUND(Importe_de_la_Escritura__c,2)) = TEXT(ROUND(Suma_Total_de_Pagares__c,2))),
				   ( TEXT(ROUND(Valor_de_Operacion__c,2))  = TEXT(ROUND(Suma_Total_de_Pagares__c,2)) )
			  ), 
		TRUE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Valor Operación</label>
    <type>Checkbox</type>
</CustomField>