unpackaged/main/default/objects/Titulacion__c/fields/Chk_Info_Complete_PagFin_1__c.field-meta.xml
<CustomField>
    <fullName>Chk_Info_Complete_PagFin_1__c</fullName>
    <formula>IF( Chk_Requiere_PagFin_1__c, 
				AND(
			      OR(ISNULL(Financiera_Formula__c), NOT(ISBLANK(Financiera_Formula__c)) ),
				     OR(ISNULL(Producto_de_la_Financiera_Formula__c), NOT(ISBLANK(Producto_de_la_Financiera_Formula__c)) ),
         OR(ISNULL(Numero_de_Credito__c), NOT(ISBLANK(Numero_de_Credito__c))),
     				OR(ISNULL(Monto_de_Credito_Definitivo__c), NOT(ISBLANK(Monto_de_Credito_Definitivo__c)) ),
	     			OR(ISNULL(Fecha_de_Autorizacion__c), NOT(ISBLANK(Fecha_de_Autorizacion__c)) )
	    		),
			TRUE
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Info Complete PagFin 1</label>
    <type>Checkbox</type>
</CustomField>