unpackaged/main/default/objects/Titulacion__c/fields/Chk_Info_Complete_PagFin_2__c.field-meta.xml
<CustomField>
    <fullName>Chk_Info_Complete_PagFin_2__c</fullName>
    <formula>IF(Chk_Requiere_PagFin_2__c,
   AND(
			     OR(ISNULL(TEXT(Financiera_2__c)), NOT(ISBLANK(TEXT(Financiera_2__c))) ),
				    OR(ISNULL(TEXT(Producto_de_la_Financiera_2__c)), NOT(ISBLANK(TEXT(Producto_de_la_Financiera_2__c))) ),
        OR(ISNULL(Numero_de_Credito_2__c), NOT(ISBLANK(Numero_de_Credito_2__c))),
	    			OR(ISNULL(Monto_de_Credito_Definitivo_2__c), NOT(ISBLANK(Monto_de_Credito_Definitivo_2__c)) ),
    				OR(ISNULL(Fecha_de_Autorizacion_2__c), NOT(ISBLANK(Fecha_de_Autorizacion_2__c)) )
	    		),
			TRUE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Info Complete PagFin 2</label>
    <type>Checkbox</type>
</CustomField>