unpackaged/main/default/objects/Titulacion__c/fields/Chk_Info_Complete_PagFin_3__c.field-meta.xml
<CustomField>
    <fullName>Chk_Info_Complete_PagFin_3__c</fullName>
    <formula>IF( Chk_Requiere_PagFin_3__c, 
				AND(
    			 OR( NOT(ISNULL(TEXT(Financiera_3__c))), NOT(ISBLANK(TEXT(Financiera_3__c))) ),
    				OR( NOT(ISNULL(TEXT(Producto_de_la_Financiera_3__c))), NOT(ISBLANK(TEXT(Producto_de_la_Financiera_3__c)))),
				    OR( NOT(ISNULL(Numero_de_Credito_3__c)), NOT(ISBLANK(Numero_de_Credito_3__c))),
    				OR( NOT(ISNULL(Monto_de_Credito_Definitivo_3__c)), NOT(ISBLANK(Monto_de_Credito_Definitivo_3__c))),
				    OR( NOT(ISNULL(Fecha_de_Autorizacion_3__c)), NOT(ISBLANK(Fecha_de_Autorizacion_3__c)))
			    ),
			 TRUE
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Info Complete PagFin 3</label>
    <type>Checkbox</type>
</CustomField>