unpackaged/main/default/objects/Titulacion__c/fields/Chk_Pagares_Financiera_Complete__c.field-meta.xml
<CustomField>
    <fullName>Chk_Pagares_Financiera_Complete__c</fullName>
    <formula>IF(Pagares_Financiera_Count__c = 0, 
			TRUE,
			AND(Chk_Info_Complete_PagFin_3__c,
							Chk_Info_Complete_PagFin_2__c,
							Chk_Info_Complete_PagFin_1__c
							)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Pagarés Financiera Complete</label>
    <type>Checkbox</type>
</CustomField>