unpackaged/main/default/objects/Titulacion__c/fields/Chk_Requiere_PagFin_3__c.field-meta.xml
<CustomField>
    <fullName>Chk_Requiere_PagFin_3__c</fullName>
    <formula>IF( Pagares_Financiera_Count__c  &gt;= 3, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chk - Requiere PagFin 3</label>
    <type>Checkbox</type>
</CustomField>