unpackaged/main/default/objects/Titulacion__c/fields/Cliente_Formula__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Formula__c</fullName>
    <formula>Cliente__r.Nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>