unpackaged/main/default/objects/Titulacion__c/fields/Codigo_Postal_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_Fiscal__c</fullName>
    <label>Código Postal Fiscal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>