unpackaged/main/default/objects/Titulacion__c/fields/Confirmacion_de_Recepcion_del_Expediente__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_de_Recepcion_del_Expediente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación de Recepción del Expediente</label>
    <type>Checkbox</type>
</CustomField>