unpackaged/main/default/objects/Titulacion__c/fields/Confirmacion_Legal__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_Legal__c</fullName>
    <label>Confirmación Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmada</fullName>
            </value>
            <value>
                <fullName>No Confirmada</fullName>
                <default>true</default>
                <label>No Confirmada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>