unpackaged/main/default/objects/Titulacion__c/fields/Domicilio_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Fiscal__c</fullName>
    <label>Domicilio Fiscal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>