unpackaged/main/default/objects/Titulacion__c/fields/Double_Check_Exigible_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Double_Check_Exigible_Cobro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Check Exigible Cobro</label>
    <type>Checkbox</type>
</CustomField>