unpackaged/main/default/objects/Titulacion__c/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <formula>Vivienda__r.Tiene_DTI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTI</label>
    <type>Checkbox</type>
</CustomField>