unpackaged/main/default/objects/Titulacion__c/fields/DTU__c.field-meta.xml
<CustomField>
    <fullName>DTU__c</fullName>
    <formula>Vivienda__r.Tiene_DTU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DTU</label>
    <type>Checkbox</type>
</CustomField>