unpackaged/main/default/objects/Titulacion__c/fields/Envia_al_SAT__c.field-meta.xml
<CustomField>
    <fullName>Envia_al_SAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envia al SAT</label>
    <type>Checkbox</type>
</CustomField>