unpackaged/main/default/objects/Titulacion__c/fields/Envio_a_SAT__c.field-meta.xml
<CustomField>
    <fullName>Envio_a_SAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio a SAT</label>
    <type>Checkbox</type>
</CustomField>