unpackaged/main/default/objects/Titulacion__c/fields/Es_nueva_Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Es_nueva_Titulacion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es nueva Titulación</label>
    <type>Checkbox</type>
</CustomField>