unpackaged/main/default/objects/Titulacion__c/fields/Escritura_Confirmada_por_Titulador_BIS__c.field-meta.xml
<CustomField>
    <fullName>Escritura_Confirmada_por_Titulador_BIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escritura Confirmada por Titulador BIS</label>
    <type>Checkbox</type>
</CustomField>