unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aprobacion__c</fullName>
    <label>Estatus Aprobacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
                <default>true</default>
                <label>En Progreso</label>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
                <isActive>false</isActive>
                <label>Pendiente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>