unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Aprobacion_Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aprobacion_Cobranza_Comercial__c</fullName>
    <formula>TEXT(Cobranza_Comercial__r.Sub_Estatus_Proceso__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Aprobacion Cobranza Comercial</label>
    <type>Text</type>
</CustomField>