unpackaged/main/default/objects/Titulacion__c/fields/Estatus_del_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_del_Proceso_de_Venta__c</fullName>
    <formula>TEXT( Proceso_de_Venta__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus del Proceso de Venta</label>
    <type>Text</type>
</CustomField>