unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Expediente__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Expediente__c</fullName>
    <description>-Emisión: El proceso cuenta con Fecha de Envío a Notaría y  Fecha de Recepción Notaría registrados.
-Notaría: El proceso cuenta con Fecha de Envío a Notaría pero No con la Fecha de Recepción Notaría registrada.
-Titulación: El proceso NO cuenta con Fecha de Envío a Notaría y  Fecha de Recepción Notaría registrados</description>
    <formula>IF( AND(NOT(ISBLANK(Fecha_de_Envio_a_Notaria__c)) , NOT(ISBLANK(Fecha_de_Recepcion_Notaria__c ))) , &#39;Emision&#39;,
 IF( AND(NOT(ISBLANK(Fecha_de_Envio_a_Notaria__c)), ISBLANK(Fecha_de_Recepcion_Notaria__c)), &#39;Notaria&#39;,
 IF( AND(ISBLANK(Fecha_de_Envio_a_Notaria__c), ISBLANK(Fecha_de_Recepcion_Notaria__c)), &#39;Titulacion&#39;, &#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Expediente</label>
    <type>Text</type>
</CustomField>