unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso__c</fullName>
    <label>Estatus Proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Formalizado</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>