unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Promocion_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Promocion_de_Precio__c</fullName>
    <formula>TEXT( Plan_de_Venta__r.Estatus_Promocion_de_Precio_Formula__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Promoción de Precio</label>
    <type>Text</type>
</CustomField>