unpackaged/main/default/objects/Titulacion__c/fields/Estatus_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Vivienda__c</fullName>
    <formula>Vivienda__r.Estatus_Vivienda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Vivienda</label>
    <type>Text</type>
</CustomField>