unpackaged/main/default/objects/Titulacion__c/fields/Exigible__c.field-meta.xml
<CustomField>
    <fullName>Exigible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exigible</label>
    <type>Checkbox</type>
</CustomField>