unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Aviso_de_recepcion_aviso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aviso_de_recepcion_aviso__c</fullName>
    <label>Fecha de notificación de descuento</label>
    <type>Date</type>
</CustomField>