unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cancelaci_n__c</fullName>
    <label>Fecha Cancelación</label>
    <type>Date</type>
</CustomField>