unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Autorizacion_2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Autorizacion_2__c</fullName>
    <label>Fecha de Autorización 2</label>
    <type>Date</type>
</CustomField>