unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Autorizacion_3__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Autorizacion_3__c</fullName>
    <label>Fecha de Autorización 3</label>
    <type>Date</type>
</CustomField>