unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Autorizacion__c</fullName>
    <label>Fecha de Autorización</label>
    <type>Date</type>
</CustomField>