unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Cita_para_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cita_para_Firma__c</fullName>
    <label>Fecha de Cita para Firma</label>
    <type>Date</type>
</CustomField>