unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Envio_a_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Envio_a_Notaria__c</fullName>
    <label>Fecha de Envio a Notaria</label>
    <type>Date</type>
</CustomField>