unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Escritura__c</fullName>
    <label>Fecha de Escritura</label>
    <type>Date</type>
</CustomField>