unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Recepcion_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Recepcion_Notaria__c</fullName>
    <label>Fecha de Recepción Notaria</label>
    <type>Date</type>
</CustomField>