unpackaged/main/default/objects/Titulacion__c/fields/Fecha_de_Recepcion_Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Recepcion_Titulacion__c</fullName>
    <formula>IF( Confirmacion_de_Recepcion_del_Expediente__c ,  TODAY() , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Recepción Titulación</label>
    <type>Date</type>
</CustomField>