unpackaged/main/default/objects/Titulacion__c/fields/Fecha_del_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_Avaluo__c</fullName>
    <label>Fecha del Avaluo</label>
    <type>Date</type>
</CustomField>