unpackaged/main/default/objects/Titulacion__c/fields/Fecha_DTI__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTI__c</fullName>
    <label>Fecha DTI</label>
    <type>Date</type>
</CustomField>