unpackaged/main/default/objects/Titulacion__c/fields/Fecha_DTI_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTI_Formula__c</fullName>
    <formula>Vivienda__r.Fecha_DTI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha DTI</label>
    <type>Date</type>
</CustomField>