unpackaged/main/default/objects/Titulacion__c/fields/Fecha_DTU__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTU__c</fullName>
    <label>Fecha DTU</label>
    <type>Date</type>
</CustomField>