unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>