unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Exigible_Para_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Exigible_Para_Cobro__c</fullName>
    <label>Fecha Exigible Para Cobro</label>
    <type>Date</type>
</CustomField>