unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Firma_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Firma_Cliente__c</fullName>
    <label>Fecha Firma Cliente</label>
    <type>Date</type>
</CustomField>