unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reserva__c</fullName>
    <label>Fecha Reserva</label>
    <type>Date</type>
</CustomField>