unpackaged/main/default/objects/Titulacion__c/fields/Fecha_reserva_formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_reserva_formula__c</fullName>
    <formula>Proceso_de_Venta__r.Fecha_de_Reserva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha reserva</label>
    <type>Date</type>
</CustomField>