unpackaged/main/default/objects/Titulacion__c/fields/Fecha_Solicitud_de_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_de_Avaluo__c</fullName>
    <label>Fecha Solicitud de Avaluo</label>
    <type>Date</type>
</CustomField>