unpackaged/main/default/objects/Titulacion__c/fields/Fideicomiso__c.field-meta.xml
<CustomField>
    <fullName>Fideicomiso__c</fullName>
    <formula>Vivienda__r.Check_Fideicomiso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fideicomiso</label>
    <type>Checkbox</type>
</CustomField>