unpackaged/main/default/objects/Titulacion__c/fields/Financiera_2__c.field-meta.xml
<CustomField>
    <fullName>Financiera_2__c</fullName>
    <label>Financiera 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financiera</valueSetName>
    </valueSet>
</CustomField>