unpackaged/main/default/objects/Titulacion__c/fields/Financiera_3__c.field-meta.xml
<CustomField>
    <fullName>Financiera_3__c</fullName>
    <label>Financiera 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financiera</valueSetName>
    </valueSet>
</CustomField>